Add Copy Overlay Animation

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-colors",
+  "homepage": "https://robertocannella.com/react-colors",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
