--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/chroma-js": "^2.1.4",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.4",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "chroma-js": "^2.4.2",
     "eslint": "8.22.0",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
