--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@types/chroma-js": "^2.1.4",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.4",
+    "@types/rc-slider": "^9.3.1",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "chroma-js": "^2.4.2",
     "eslint": "8.22.0",
+    "rc-slider": "^10.1.0",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
